--- a/.gitattributes
+++ b/.gitattributes
@@ -1,1 +1,3 @@
 FAOSTAT/Crops[[:space:]]and[[:space:]]livestock[[:space:]]products/Production_Crops_Livestock_E_All_Data_(Normalized).csv filter=lfs diff=lfs merge=lfs -text
+EEA/UNFCCC_v28_4.accdb filter=lfs diff=lfs merge=lfs -text
+EEA/UNFCCC_v28.csv filter=lfs diff=lfs merge=lfs -text
