--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,8 @@
 FAOSTAT/Crops[[:space:]]and[[:space:]]livestock[[:space:]]products/Production_Crops_Livestock_E_All_Data_(Normalized).csv filter=lfs diff=lfs merge=lfs -text
 EEA/UNFCCC_v28_4.accdb filter=lfs diff=lfs merge=lfs -text
 EEA/UNFCCC_v28.csv filter=lfs diff=lfs merge=lfs -text
+FAOSTAT/Land[[:space:]]Use/Inputs_LandUse_E_All_Data_(Normalized).csv filter=lfs diff=lfs merge=lfs -text
+FAOSTAT/Land[[:space:]]Use/Inputs_LandUse_E_AreaCodes.csv filter=lfs diff=lfs merge=lfs -text
+FAOSTAT/Land[[:space:]]Use/Inputs_LandUse_E_Elements.csv filter=lfs diff=lfs merge=lfs -text
+FAOSTAT/Land[[:space:]]Use/Inputs_LandUse_E_Flags.csv filter=lfs diff=lfs merge=lfs -text
+FAOSTAT/Land[[:space:]]Use/Inputs_LandUse_E_ItemCodes.csv filter=lfs diff=lfs merge=lfs -text
